<resources>
    <string name="app_name">Apple Mine Seeker</string>
    <string name="skip">SKIP</string>
    <string name="author">By: Austin Kwan</string>
    <string name="ignoreContentDescription">tools:ignore=ContentDescription</string>
    <string name="main_menu">Main Menu</string>
    <string name="play_game">Play game</string>
    <string name="help">Help</string>
    <string name="options">Options</string>
    <string name="helpText">About Author :
        \nAustin Kwan is a SFU <a href="https://opencoursehub.cs.sfu.ca/jackt/grav-cms/cmpt276-2/home">CMPT 276</a> student.
        \n\nHow to play:
        \nA mysterious basket of apples is delivered to you for free; it contains a note explaining that there are apples with mines mixed in with the regular apples. Being \u0020the smart and intelligent person that you are, you decide to find all the apples with \u0020mines with your latest and greatest scanner using the least number of scans.
        \nTapping on an apple checks if it has a mine or not. If it does not have a mine, it scans for mines in the same row and column. An apple with a mine can be scanned for other mines as well.
        \n\n <a href="https://iconscout.com/icon/apple-fruit-food-vitamin-healthy">Apple Icon</a>
        \n <a href="https://thenounproject.com/term/mine/915944/">Mine Icon</a>
        \n <a href="https://www.needpix.com/photo/download/1183840/basket-fibers-basket-texture-braid-background-woven-structure-natural-material-wicker">Basket Background</a>
        \n <a href="https://www.flaticon.com/free-icon/fireworks_256665">Firework Icon</a>
        \n <a href="http://198.211.103.19/~nebomusic/media/">Sound Effects</a>
    </string>
    <string name="win_message">Congratulations! You Won!</string>
    <string name="game_over">Game Over</string>
    <string name="ok_button">OK</string>
    <string name="settings">Settings :</string>
    <string name="mines">\ mines</string>
    <string name="mines_selected">\ mines selected</string>
    <string name="times_played">Times Played: \</string>
    <string name="num_scans"># Scans used: \</string>
    <string name="found">Found \</string>
    <string name="of">\ of \</string>
    <string name="mines_2">\ Mines</string>
    <string name="number_of_mines">Number of Mines :</string>
    <string name="board_size">Board Size :</string>
    <string name="selected">\ selected</string>
    <string name="best_score_for">Best Score(\</string>
    <string name="rows_by">\ rows by \</string>
    <string name="columns">\ columns): \</string>
</resources>