<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/basket_background_dark"
    tools:context=".ui.MainMenuActivity">

    <Button
        android:id="@+id/startGameBtn"
        style="@android:style/Widget.Material.Button.Inset"
        android:layout_width="230dp"
        android:layout_height="72dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="casual"
        android:text="@string/play_game"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/mineApple2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/helpBtn"
        style="@android:style/Widget.Material.Button.Inset"
        android:layout_width="230dp"
        android:layout_height="72dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="casual"
        android:text="@string/help"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mineApple2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionsBtn"
        app:layout_constraintVertical_bias="0.056" />

    <Button
        android:id="@+id/optionsBtn"
        style="@android:style/Widget.Material.Button.Inset"
        android:layout_width="230dp"
        android:layout_height="72dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="casual"
        android:text="@string/options"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/mineApple2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startGameBtn" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="255dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:fontFamily="casual"
        android:text="@string/main_menu"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mineApple2"
        android:layout_width="295dp"
        android:layout_height="236dp"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/ignoreContentDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.344"
        app:srcCompat="@drawable/mine_apple" />
</androidx.constraintlayout.widget.ConstraintLayout>